PR/48720: John Kelly: com driver does not allow B0 to be set. The code to handle B0 was commented out for no reason given at revision 1.99. POSIX mandates to hangup on B0: http://pubs.opengroup.org/onlinepubs/9699919799/functions/tcsetattr.html